--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -11,7 +11,10 @@
     <thead>
         <tr>
             <th>
-                Pelambres
+                Codigo Lote
+            </th>
+            <th>
+                Pieles del Pelambre
             </th>
             <th>
                 Cantidad
