--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -246,7 +246,7 @@
 
                         </table>
                     </div>
-                    @* Hoja de pesaje *@
+                    @* Hoja de producto quimico *@
                     <div class="form-group">
                         <table class="table table-bordered SaltoDePagina">
                             <tr>
