--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -65,7 +65,7 @@
                     <div class="form-group">
                         <label class="control-label">Numero de Pieles</label>
                         
-                        <input id="NumeroPielesInput" type="number" name="NumeroPielesInput" class="form-control" @*onfocus="controlnumeropieltripa()*@">
+                        <input id="NumeroPielesInput" type="number" name="NumeroPielesInput" class="form-control" onfocus="controlnumeropieltripa()">
                     </div>
                     <div class="form-group">
                         <label class="control-label">Peso</label>
