--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -260,25 +260,25 @@
                             </tr>
                             <tr>
                                 <td style="font-size:xx-small">FECHA:</td>
-                                <td style="font-size:xx-small">&nbsp;<label id="fecha" name="fecha" class="control-label"></label></td>
-                                <td style="font-size:xx-small">FECHA:</td>
-                                <td style="font-size:xx-small">PROCESADOR POR:</td>
+                                <td style="font-size:xx-small">&nbsp;</td>
+                                <td style="font-size:xx-small">&nbsp;<label id="fecha_vigencia_quimico" name="fecha_vigencia_quimico" class="control-label"></label></td>
+                                <td style="font-size:xx-small">PROCESADOR POR: <label id="procesadoquimico" name="procesadoquimico" class="control-label"></label></td>
                             </tr>
                             <tr>
                                 <td style="font-size:xx-small">LOTE:</td>
-                                <td style="font-size:xx-small">&nbsp;<label id="lote" name="lote" class="control-label"></label></td>
+                                <td style="font-size:xx-small">&nbsp;<label id="codigoquimico" name="codigoquimico" class="control-label"></label></td>
                                 <td style="font-size:xx-small">PAGINA:</td>
                                 <td style="font-size:xx-small">2</td>
                             </tr>
                             <tr>
                                 <td style="font-size:xx-small">BOMBO:</td>
-                                <td style="font-size:xx-small">&nbsp;<label id="bombo" name="bombo" class="control-label"></label></td>
+                                <td style="font-size:xx-small">&nbsp;<label id="bomboquimico" name="bomboquimico" class="control-label"></label></td>
                                 <td style="font-size:xx-small">&nbsp;</td>
                                 <td style="font-size:xx-small">&nbsp;</td>
                             </tr>
                             <tr>
                                 <td style="font-size:xx-small">PESO:</td>
-                                <td style="font-size:xx-small">&nbsp;<label id="peso" name="peso" class="control-label"></label></td>
+                                <td style="font-size:xx-small">&nbsp;<label id="pesoquimico" name="pesoquimico" class="control-label"></label></td>
                                 <td style="font-size:xx-small">&nbsp;</td>
                                 <td style="font-size:xx-small">&nbsp;</td>
                             </tr>
@@ -290,7 +290,7 @@
                             </tr>
                             <tr>
                                 <td style="font-size:xx-small">PROMEDIO:</td>
-                                <td style="font-size:xx-small">&nbsp;<label id="promedio" name="promedio" class="control-label"></label></td>
+                                <td style="font-size:xx-small">&nbsp;<label id="PromedioQuimico" name="PromedioQuimico" class="control-label"></label></td>
                                 <td style="font-size:xx-small">&nbsp;</td>
                                 <td style="font-size:xx-small">&nbsp;</td>
                             </tr>
