--- a/ServicuerosSA/Views/Lotes/Create.cshtml
+++ b/ServicuerosSA/Views/Lotes/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Codigolote" class="control-label"></label>
-                <input asp-for="Codigolote" onfocusout="CodigoLotes();" class="form-control" />
+                <input asp-for="Codigolote"  class="form-control" />
                 <span asp-validation-for="Codigolote" id="codigolote" class="text-danger"></span>
                 <span id="codigo" name="codigo" class="text-danger" style="visibility:hidden">El codigo ya se encuentra registrado</span>
 
