--- a/ServicuerosSA/Views/Pelambres/Index.cshtml
+++ b/ServicuerosSA/Views/Pelambres/Index.cshtml
@@ -250,7 +250,7 @@
                     <div class="form-group">
                         <table class="table table-bordered SaltoDePagina">
                             <tr>
-                                <td style="font-size:x-small" colspan="4">PESAJE DE PRODUCTO QUIMICO</td>
+                                <th style="font-size:small" colspan="4">PESAJE DE PRODUCTO QUIMICO</th>
                             </tr>
                             <tr>
                                 <td class="auto-style13" colspan="4"></td>
@@ -273,45 +273,27 @@
                             <tr>
                                 <td style="font-size:xx-small">BOMBO:</td>
                                 <td style="font-size:xx-small">&nbsp;<label id="bomboquimico" name="bomboquimico" class="control-label"></label></td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
+                                <td style="font-size:xx-small">PIELES:</td>
+                                <td style="font-size:xx-small">&nbsp;<label id="pieles" name="pieles" class="control-label"></label></td>
                             </tr>
                             <tr>
                                 <td style="font-size:xx-small">PESO:</td>
                                 <td style="font-size:xx-small">&nbsp;<label id="pesoquimico" name="pesoquimico" class="control-label"></label></td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td style="font-size:xx-small">PIELES:</td>
-                                <td style="font-size:xx-small">&nbsp;<label id="pieles" name="pieles" class="control-label"></label></td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                            </tr>
-                            <tr>
                                 <td style="font-size:xx-small">PROMEDIO:</td>
                                 <td style="font-size:xx-small">&nbsp;<label id="PromedioQuimico" name="PromedioQuimico" class="control-label"></label></td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                            </tr>
-                            <tr>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
-                                <td style="font-size:xx-small">&nbsp;</td>
                             </tr>
                         </table>
                     </div>
                     <div class="form-group">
-                        <table class="table table-bordered SaltoDePagina" >
+                        <table class="table table-bordered" >
                             <thead>
                                 <tr>
-                                    <td style="font-size:x-small" colspan="2">PRODUCTO</td>
-                                    <td style="font-size:x-small">%</td>
-                                    <td style="font-size:x-small">CANTIDAD</td>
+                                    <th>Producto</th>
+                                    <th>%</th>
+                                    <th>Cantidad</th>
                                 </tr>
                             </thead>
-                            <tbody id="TablaProductoQuimico"></tbody>
+                            <tbody id="TablaDetalleQuimico"></tbody>
                         </table>
                     </div>
                     <div class="form-group">
@@ -356,7 +338,7 @@
                         <tbody id="TablaPesaje"></tbody>
                         </table>
                   </div>
-            </div>
+                 </div>
 
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
