--- a/ServicuerosSA/Views/Formulas/Index.cshtml
+++ b/ServicuerosSA/Views/Formulas/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Crear una nueva formula</a>
 </p>
-<table class="table">
+<table class="table" id="TablaFormulas">
     <thead>
         <tr>
                 <th>
