--- a/ServicuerosSA/Views/Shared/_Layout.cshtml
+++ b/ServicuerosSA/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/sweetalert.css" />
+        <link rel="stylesheet" href="~/css/jquery.dataTables.css" />
+
 
     </environment>
     <environment exclude="Development">
@@ -130,7 +132,8 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/sweetalert.js"></script>
-
+        <script src="~/js/jquery.dataTables.js"></script>
+        
         <script src="~/js/Lotes.js" asp-append-version="true"></script>
         <script src="~/js/Formulas.js" asp-append-version="true"></script>
         <script src="~/js/Bombos.js" asp-append-version="true"></script>
