--- a/ServicuerosSA/Views/BodegaClasificaciones/Index.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Ingresar nueva clasificación</a>
 </p>
-<table class="table">
+<table class="table" id="TablaPelo">
     <thead>
         <tr>
                 <th>
