--- a/ServicuerosSA/Views/Clasificaciones/Index.cshtml
+++ b/ServicuerosSA/Views/Clasificaciones/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     <a asp-action="Create">Ingreso nuevo nombre de clasificacion</a>
 </p>
-<table class="table" id="TablaPelo">
+<table class="table" >
     <thead>
         <tr>
                 <th>
