--- a/ServicuerosSA/Views/BodegaClasificacion/Create.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificacion/Create.cshtml
@@ -1,37 +1,32 @@
 ﻿@model ServicuerosSA.Models.Bodega1
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Create";
 }
 
-<h2>Edit</h2>
+<h2>Create</h2>
 
 <h4>Bodega1</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Bodega1Id" />
             <div class="form-group">
                 <label asp-for="BodegaId" class="control-label"></label>
-                <select asp-for="BodegaId" class="form-control" asp-items="ViewBag.BodegaId"></select>
-                <span asp-validation-for="BodegaId" class="text-danger"></span>
+                <select asp-for="BodegaId" class ="form-control" asp-items="ViewBag.BodegaId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="LoteId" class="control-label"></label>
-                <select asp-for="LoteId" class="form-control" asp-items="ViewBag.LoteId"></select>
-                <span asp-validation-for="LoteId" class="text-danger"></span>
+                <select asp-for="LoteId" class ="form-control" asp-items="ViewBag.LoteId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="ClasificacionId" class="control-label"></label>
-                <select asp-for="ClasificacionId" class="form-control" asp-items="ViewBag.ClasificacionId"></select>
-                <span asp-validation-for="ClasificacionId" class="text-danger"></span>
+                <select asp-for="ClasificacionId" class ="form-control" asp-items="ViewBag.ClasificacionId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="MedidaId" class="control-label"></label>
-                <select asp-for="MedidaId" class="form-control" asp-items="ViewBag.MedidaId"></select>
-                <span asp-validation-for="MedidaId" class="text-danger"></span>
+                <select asp-for="MedidaId" class ="form-control" asp-items="ViewBag.MedidaId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Fechaingreso" class="control-label"></label>
@@ -40,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="NumeroEstanteria" class="control-label"></label>
-                <input asp-for="NumeroEstanteria" class="form-control" />
+                <input asp-for="NumeroEstanteria" class="form-control" type="text" />
                 <span asp-validation-for="NumeroEstanteria" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -67,11 +62,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoPielId" class="control-label"></label>
-                <select asp-for="TipoPielId" class="form-control" asp-items="ViewBag.TipoPielId"></select>
-                <span asp-validation-for="TipoPielId" class="text-danger"></span>
+                <select asp-for="TipoPielId" class ="form-control" asp-items="ViewBag.TipoPielId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
