--- a/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
@@ -4,40 +4,29 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Nuevo Ingreso a bodega</h2>
+<h2>Create</h2>
 
 <h4>Bodega1</h4>
 <hr />
-
-
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="BodegaId" class="control-label ">Bodega</label>
-                <div class="cssToolTip">
-                    <select asp-for="BodegaId" class="form-control" onchange="boodegas();"
-                            asp-items="ViewBag.BodegaId"></select>
-                    <span id="Bodegas" name="Bodegas"></span>
-                </div>
+                <label asp-for="BodegaId" class="control-label"></label>
+                <select asp-for="BodegaId" class ="form-control" asp-items="ViewBag.BodegaId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="LoteId" class="control-label">Lote</label>
-                <div class="cssToolTip">
-                    <select asp-for="LoteId" class="form-control" onchange="lote();"
-                            asp-items="ViewBag.LoteId"></select>
-                    <span id="Lotes" name="Lotes"></span>
-                </div>
+                <label asp-for="LoteId" class="control-label"></label>
+                <select asp-for="LoteId" class ="form-control" asp-items="ViewBag.LoteId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="ClasificacionId" class="control-label">Clasificación</label>
-                <select asp-for="ClasificacionId" class="form-control" asp-items="ViewBag.ClasificacionId"></select>
+                <label asp-for="ClasificacionId" class="control-label"></label>
+                <select asp-for="ClasificacionId" class ="form-control" asp-items="ViewBag.ClasificacionId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="TipoPielId" class="control-label"></label>
-                <select asp-for="TipoPielId" class="form-control" asp-items="ViewBag.TipoPielId"></select>
-                <span asp-validation-for="TipoPielId" class="text-danger"></span>
+                <label asp-for="MedidaId" class="control-label"></label>
+                <select asp-for="MedidaId" class ="form-control" asp-items="ViewBag.MedidaId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Fechaingreso" class="control-label"></label>
@@ -51,12 +40,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="NumeroPieles" class="control-label"></label>
-
-                <input asp-for="NumeroPieles" class="form-control" onfocusout="numeropileslote();" />
+                <input asp-for="NumeroPieles" class="form-control" />
                 <span asp-validation-for="NumeroPieles" class="text-danger"></span>
-                <span id="numpieles" name="numpieles" class="text-danger" style="visibility:hidden">El número de pieles no debe ser mayor a Lote</span>
-
-
             </div>
             <div class="form-group">
                 <label asp-for="Peso" class="control-label"></label>
@@ -64,91 +49,32 @@
                 <span asp-validation-for="Peso" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label for="MedidaId" class="control-label">Medida de Peso</label>
-                <select asp-for="MedidaId" class="form-control" asp-items="ViewBag.MedidaId"></select>
-                <span asp-validation-for="MedidaId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Observaciones" class="control-label"></label>
                 <input asp-for="Observaciones" class="form-control" />
                 <span asp-validation-for="Observaciones" class="text-danger"></span>
             </div>
-            <div class="form-group" style="visibility:hidden">
+            <div class="form-group">
                 <div class="checkbox">
                     <label>
-                        <input asp-for="activo" checked /> @Html.DisplayNameFor(model => model.activo)
+                        <input asp-for="activo" /> @Html.DisplayNameFor(model => model.activo)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <input id="graba" name="graba" type="submit" value="Crear" class="btn btn-default" />
+                <label asp-for="TipoPielId" class="control-label"></label>
+                <select asp-for="TipoPielId" class ="form-control" asp-items="ViewBag.TipoPielId"></select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista de clasificaciones</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-
-<style>
-    .cssToolTip {
-        position: relative; /* Esta clase tiene que tener posicion relativa */
-        color: #ff8c00; /* Color del texto */
-        
-    }
-        /* El tooltip */
-        .cssToolTip span {
-            background: rgba(20,20,20,0.9);
-            border: 2px solid white;
-            border-radius: 5px;
-            box-shadow: 5px 5px 5px #333;
-            color: White;
-            display: none; /* El tooltip por defecto estara oculto */
-            font-size: 0.8em;
-            padding: 10px;
-            max-width: 6000px;
-            position: absolute; /* El tooltip se posiciona de forma absoluta para no modificar el aspezto del resto de la pagina */
-            top: 15px; /* Posicion apartir de la parte superior del primer elemento padre con posicion relativa */
-            right: -5px; /* Posicion apartir de la parte izquierda del primer elemento padre con posicion relativa */
-            z-index: 100; /* Poner un z-index alto para que aparezca por encima del resto de elementos */
-        }
-
-        /* El tooltip cuando se muestra */
-        .cssToolTip:hover span {
-            display: inline; /* Para mostrarlo simplemente usamos display block por ejemplo */
-        }
-
-
-    .cssToolTip1 {
-        position: relative; /* Esta clase tiene que tener posicion relativa */
-        color: #ff8c00; /* Color del texto */
-    }
-        /* El tooltip */
-        .cssToolTip1 span {
-            background: rgba(20,20,20,0.9);
-            border: 2px solid white;
-            border-radius: 5px;
-            box-shadow: 5px 5px 5px #333;
-            color: White;
-            display: none; /* El tooltip por defecto estara oculto */
-            font-size: 0.8em;
-            padding: 10px;
-            max-width: 6000px;
-            position: absolute; /* El tooltip se posiciona de forma absoluta para no modificar el aspezto del resto de la pagina */
-            top: 15px; /* Posicion apartir de la parte superior del primer elemento padre con posicion relativa */
-            right: -5px; /* Posicion apartir de la parte izquierda del primer elemento padre con posicion relativa */
-            z-index: 100; /* Poner un z-index alto para que aparezca por encima del resto de elementos */
-        }
-
-        /* El tooltip cuando se muestra */
-        .cssToolTip1:hover span {
-            display: inline; /* Para mostrarlo simplemente usamos display block por ejemplo */
-        }
-
-</style>
-
