--- a/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ServicuerosSA.Models.Bodega1
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Clasificacion en pelo";
 }
 
-<h2>Create</h2>
+<h2>Clasificacion en pelo</h2>
 
-<h4>Bodega1</h4>
+<h4>Bodega</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -65,14 +65,14 @@
                 <select asp-for="TipoPielId" class ="form-control" asp-items="ViewBag.TipoPielId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
