--- a/ServicuerosSA/Views/BodegaClasificaciones/Edit.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Edit.cshtml
@@ -71,14 +71,14 @@
                 <span asp-validation-for="TipoPielId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
