--- a/ServicuerosSA/Views/BodegaClasificaciones/Index.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ServicuerosSA.Models.Bodega1>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Clasificacion en pelo";
 }
 
-<h2>Index</h2>
+<h2>Clasificacion en pelo</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear una nueva</a>
 </p>
 <table class="table">
     <thead>
@@ -85,9 +85,9 @@
                 @Html.DisplayFor(modelItem => item.TipoPiel.Detalle)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Bodega1Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Bodega1Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Bodega1Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Bodega1Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Bodega1Id">Detalles</a> |
+                @*<a asp-action="Delete" asp-route-id="@item.Bodega1Id">Delete</a>*@
             </td>
         </tr>
 }
