--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -44,7 +44,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Codigo Lote</label>
-                        <select id="Descarneid" name="Descarneid" required class="form-control" onchange="numeropielestripa();">
+                        <select id="Descarneid" name="Descarneid" required class="form-control" @*onchange="numeropielestripa();*@">
                             <option value="0">Seleccione el Lote que desee</option>
                         </select>
                         <br />
