--- a/ServicuerosSA/Views/Bodegas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegas/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Bodegas</h2>
 
 <p>
-    <a asp-action="Create">Ingreso de nueva Bodega</a>
+    <a class="btn btn-success" asp-action="Create">Ingreso de nueva Bodega</a>
 </p>
 <table class="table">
     <thead>
@@ -50,9 +50,9 @@
                     @Html.DisplayFor(modelItem => item.TiposBodega.TipoBodegaId)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.BodegaId">Editar</a> |
-                    <a asp-action="Details" asp-route-id="@item.BodegaId">Detalles</a> |
-                    <a asp-action="Delete" asp-route-id="@item.BodegaId">Eliminar</a>
+                    <a asp-action="Edit" class="btn btn-info" asp-route-id="@item.BodegaId">Editar</a> |
+                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.BodegaId">Detalles</a> |
+                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.BodegaId">Eliminar</a>
                 </td>
             </tr>
         }
