--- a/ServicuerosSA/Views/Bombos/Index.cshtml
+++ b/ServicuerosSA/Views/Bombos/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Lista de bombos disponibles</h2>
 
 <p>
-    <a asp-action="Create">Ingreso de nuevo bombo</a>
+    <a class="btn btn-success" asp-action="Create">Ingreso de nuevo bombo</a>
 </p>
 <table class="table">
     <thead>
@@ -40,9 +40,9 @@
             </td>
             
             <td>
-                <a asp-action="Edit" asp-route-id="@item.BomboId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.BomboId">Detailles</a> |
-                <a asp-action="Delete" asp-route-id="@item.BomboId">Elimina</a>
+                <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.BomboId">Editar</a> |
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.BomboId">Detalles</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.BomboId">Eliminar</a>
             </td>
         </tr>
 }
