--- a/ServicuerosSA/Views/ClasificacionTripas/Index.cshtml
+++ b/ServicuerosSA/Views/ClasificacionTripas/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Lista en tripa</h2>
 
 <p>
-    <a asp-action="Create">Ingreso una nueva calsificacion</a>
+    <a class="btn btn-success" asp-action="Create">Ingreso una nueva clasificación</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,9 @@
                 @Html.DisplayFor(modelItem => item.Detalle)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ClasificacionTripaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ClasificacionTripaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ClasificacionTripaId">Delete</a>
+                <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.ClasificacionTripaId">Editar</a> |
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.ClasificacionTripaId">Detalles</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.ClasificacionTripaId">Eliminar</a>
             </td>
         </tr>
 }
