--- a/ServicuerosSA/Views/Componentes/Create.cshtml
+++ b/ServicuerosSA/Views/Componentes/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
 
-<h4>Componente</h4>
+
+<h2>Ingrese un nuevo componente</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -43,14 +43,14 @@
                 <select asp-for="MedidaId" class ="form-control" asp-items="ViewBag.MedidaId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success" asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
