--- a/ServicuerosSA/Views/Componentes/Index.cshtml
+++ b/ServicuerosSA/Views/Componentes/Index.cshtml
@@ -4,10 +4,11 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Componentes</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+   
+    <a class="btn btn-success" asp-action="Create">Insertar un nuevo componente</a>
 </p>
 <table class="table">
     <thead>
@@ -55,9 +56,9 @@
                 @Html.DisplayFor(modelItem => item.formula.Nombre)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ComponenteId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ComponenteId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ComponenteId">Delete</a>
+                <a asp-action="Edit" class="btn btn-info"  asp-route-id="@item.ComponenteId">Editar</a> |
+                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.ComponenteId">Detalles</a> |
+                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.ComponenteId">Eliminar</a>
             </td>
         </tr>
 }
