--- a/ServicuerosSA/Views/Formulas/Create.cshtml
+++ b/ServicuerosSA/Views/Formulas/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Crear una nueva formula</h2>
+<h2>Crear una nueva fórmula</h2>
 
-<h4>Formula</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,14 +37,14 @@
                 <select asp-for="TipoPielId" class ="form-control" asp-items="ViewBag.TipoPielId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista </a>
+    <a class="btn btn-success" asp-action="Index">Regresar a la lista </a>
 </div>
 
 @section Scripts {
