--- a/ServicuerosSA/Views/Formulas/Index.cshtml
+++ b/ServicuerosSA/Views/Formulas/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Formulas</h2>
+<h2>Fórmulas</h2>
 
 <p>
-    <a asp-action="Create">Crear una nueva formula</a>
+    <a class="btn btn-success" asp-action="Create">Crear una nueva fórmula</a>
 </p>
-<table class="table" id="TablaFormulas">
+<table class="table" >
     <thead>
         <tr>
                 <th>
@@ -49,9 +49,9 @@
                 @Html.DisplayFor(modelItem => item.tipoPiel.Detalle)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.FormulaId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.FormulaId">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.FormulaId">Eliminar</a>
+                <a asp-action="Edit" class="btn btn-info"  asp-route-id="@item.FormulaId">Editar</a> |
+                <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.FormulaId">Detalles</a> |
+                <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.FormulaId">Eliminar</a>
             </td>
         </tr>
 }
