--- a/ServicuerosSA/Views/Lotes/Index.cshtml
+++ b/ServicuerosSA/Views/Lotes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<h2>REGISTRO DE LOTES</h2>
 
 <p>
-    <a asp-action="Create">Ingresar nuevo lote</a>
+    <a class="btn btn-success" asp-action="Create">Ingresar nuevo lote</a>
 </p>
 
 <table class="table">
