--- a/ServicuerosSA/Views/Proveedores/Create.cshtml
+++ b/ServicuerosSA/Views/Proveedores/Create.cshtml
@@ -4,9 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
-
-<h4>Proveedor</h4>
+<h2>Crear un nuevo proveedor</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -61,14 +59,14 @@
                 <span asp-validation-for="Marcaproveedor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar Registro" class="btn btn-default" />
+                <input type="submit" value="Guardar Registro" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista anterior</a>
+    <a class="btn btn-success" asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
