--- a/ServicuerosSA/Views/Proveedores/Details.cshtml
+++ b/ServicuerosSA/Views/Proveedores/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles del proveedor</h2>
 
 <div>
-    <h4>Proveedor</h4>
+    
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -67,6 +67,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ProveedorId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model.ProveedorId">Editar</a> |
+    <a class="btn btn-success" asp-action="Index">Regresar a la lista</a>
 </div>
