--- a/ServicuerosSA/Views/Proveedores/Edit.cshtml
+++ b/ServicuerosSA/Views/Proveedores/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editar proveedor</h2>
 
-<h4>Proveedor</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -61,14 +60,14 @@
                 <span asp-validation-for="Marcaproveedor" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-success" asp-action="Index">Regresar a la lista</a>
 </div>
 
 @section Scripts {
