--- a/ServicuerosSA/Views/Sexos/Index.cshtml
+++ b/ServicuerosSA/Views/Sexos/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Sexo</h2>
 
 <p>
-    <a asp-action="Create">Ingrese un nuevo sexo</a>
+    <a class="btn btn-info" asp-action="Create">Ingrese un nuevo sexo</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,9 @@
                 @Html.DisplayFor(modelItem => item.Detalle)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.SexoId">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.SexoId">Detalles</a> |
-                <a asp-action="Delete" asp-route-id="@item.SexoId">Eliminar</a>
+                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.SexoId">Editar</a> |
+                <a class="btn btn-success" asp-action="Details" asp-route-id="@item.SexoId">Detalles</a> |
+                <a class="btn btn-warning" asp-action="Delete" asp-route-id="@item.SexoId">Eliminar</a>
             </td>
         </tr>
 }
