--- a/ServicuerosSA/Views/Medidas/Create.cshtml
+++ b/ServicuerosSA/Views/Medidas/Create.cshtml
@@ -23,14 +23,15 @@
                 <span asp-validation-for="Abreviatura" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
+                <a class="btn btn-success" asp-action="Index">Regresar a la lista de medidas</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista de medidas</a>
+    
 </div>
 
 @section Scripts {
