--- a/ServicuerosSA/Views/Sexos/Index.cshtml
+++ b/ServicuerosSA/Views/Sexos/Index.cshtml
@@ -7,16 +7,17 @@
 <h2>Sexo</h2>
 
 <p>
-    <a class="btn btn-info" asp-action="Create">Ingrese un nuevo sexo</a>
+    <a class="btn btn-success" asp-action="Create">Ingrese un nuevo sexo</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Detalle)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Detalle)
+            </th>
             <th></th>
         </tr>
+        
     </thead>
     <tbody>
 @foreach (var item in Model) {
@@ -25,9 +26,9 @@
                 @Html.DisplayFor(modelItem => item.Detalle)
             </td>
             <td>
-                <a class="btn btn-primary" asp-action="Edit" asp-route-id="@item.SexoId">Editar</a> |
-                <a class="btn btn-success" asp-action="Details" asp-route-id="@item.SexoId">Detalles</a> |
-                <a class="btn btn-warning" asp-action="Delete" asp-route-id="@item.SexoId">Eliminar</a>
+                <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.SexoId">Editar</a> |
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.SexoId">Detalles</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.SexoId">Eliminar</a>
             </td>
         </tr>
 }
