--- a/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
+++ b/ServicuerosSA/Views/BodegaClasificaciones/Create.cshtml
@@ -65,14 +65,15 @@
                 <select asp-for="TipoPielId" class ="form-control" asp-items="ViewBag.TipoPielId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
+                <a class="btn btn-success" asp-action="Index">Regresar a la lista</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista</a>
+    
 </div>
 
 @section Scripts {
