--- a/ServicuerosSA/Views/Bombos/Create.cshtml
+++ b/ServicuerosSA/Views/Bombos/Create.cshtml
@@ -29,14 +29,15 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
+                <a class="btn btn-success" asp-action="Index">Regresar a la lista de bombos</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la lista de bombos</a>
+    
 </div>
 
 @section Scripts {
