--- a/ServicuerosSA/Views/ClasificacionTripas/Create.cshtml
+++ b/ServicuerosSA/Views/ClasificacionTripas/Create.cshtml
@@ -19,14 +19,15 @@
                 <span asp-validation-for="Detalle" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-default" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
+                <a class="btn btn-success" asp-action="Index">Regresar a la Lista</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Regresar a la Lista</a>
+    
 </div>
 
 @section Scripts {
