--- a/ServicuerosSA/Views/Personales/Create.cshtml
+++ b/ServicuerosSA/Views/Personales/Create.cshtml
@@ -53,15 +53,13 @@
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" id="graba" name="graba" value="Crear" class="btn btn-default" />
+                <input type="submit" id="graba" name="graba" value="Crear" class="btn btn-primary" />
+                <a class="btn btn-success" asp-action="Index">Regresar a la lista de personas</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Regresar a la lista de personas</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
