--- a/ServicuerosSA/Views/Proveedores/Index.cshtml
+++ b/ServicuerosSA/Views/Proveedores/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<h2>REGISTRO DE PROVEEDORES</h2>
 
 <p>
-    <a class="btn btn-info" asp-action="Create">Ingresar nuevo proveedor</a>
+    <a class="btn btn-success" asp-action="Create">Ingresar nuevo proveedor</a>
 </p>
 <table class="table">
     <thead>
