--- a/ServicuerosSA/Views/TipoBodegas/Index.cshtml
+++ b/ServicuerosSA/Views/TipoBodegas/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Bodegas por clasificacion</h2>
 
 <p>
-    <a asp-action="Create">Crear una nueva bodega</a>
+    <a class="btn btn-success" asp-action="Create">Crear una nueva bodega</a>
 </p>
 <table class="table">
     <thead>
@@ -25,9 +25,9 @@
                 @Html.DisplayFor(modelItem => item.Detalle)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TipoBodegaId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TipoBodegaId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TipoBodegaId">Delete</a>
+                <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.TipoBodegaId">Editar</a> |
+                <a class="btn btn-primary" asp-action="Details" asp-route-id="@item.TipoBodegaId">Detalles</a> |
+                <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.TipoBodegaId">Eliminar</a>
             </td>
         </tr>
 }
