--- a/ServicuerosSA/Views/Lotes/Index.cshtml
+++ b/ServicuerosSA/Views/Lotes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<h2>REGISTRO DE LOTES</h2>
+﻿<h2>Registro de lotes</h2>
 
 <p>
     <a class="btn btn-success" asp-action="Create">Ingresar nuevo lote</a>
