--- a/ServicuerosSA/Views/Proveedores/Index.cshtml
+++ b/ServicuerosSA/Views/Proveedores/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<h2>REGISTRO DE PROVEEDORES</h2>
+﻿<h2>Registro de proveedores</h2>
 
 <p>
     <a class="btn btn-success" asp-action="Create">Ingresar nuevo proveedor</a>
