--- a/ServicuerosSA/Views/Descarnes/Index.cshtml
+++ b/ServicuerosSA/Views/Descarnes/Index.cshtml
@@ -5,7 +5,7 @@
 
 <h2>Proceso en Descarne</h2>
 <p>
-    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambreDescarne(); listaPersonal(); ListaIndex(); ">Nuevo Proceso</a>
+    <a href="#" class="btn btn-success" data-toggle="modal" data-target="#IngresoDescarne" onclick="ListaPelambreDescarne(); listaPersonal(); ListaIndexDescarne(); ">Nuevo Proceso</a>
 </p>
 <table class="table">
     <thead>
@@ -13,17 +13,17 @@
             <th>
                 Codigo Lote
             </th>
-            <th>
+            @*<th>
                 Pieles del Pelambre
-            </th>
+            </th>*@
             <th>
                 Cantidad
             </th>
            
 
-            <th>
-                codigolote
-            </th>
+            @*<th>
+               codigolote
+            </th>*@
         </tr>
     </thead>
     <tbody id="DescarneLista"> </tbody>
@@ -46,7 +46,7 @@
                 <form>
                     <div class="form-group">
                         <label class="control-label">Lotes en Pelambre</label>
-                        <select id="PelambreId" name="PelambreId" required class="form-control" @*onchange="NumeroPielesPelambre(); "*@>
+                        <select id="PelambreId" name="PelambreId" required class="form-control" onchange="NumeroPielesPelambre(); ">
                             <option value="0">Seleccione una lo que desea descarnar</option>
                         </select>
                         <br />
@@ -67,7 +67,7 @@
                     </div>*@
                     <div class="form-group">
                         <label class="control-label">Numero de pieles a Descarne</label>
-                        <input id="CantidadPieles" name="descarne" required class="form-control" onfocusout="controlnumeropieles()">
+                        <input id="CantidadPieles" name="descarne" required class="form-control" @*onfocusout="controlnumeropieles()"*@>
                         <br />
                         <span id="mensajec" class="alert alert-danger hidden">Ingrese un numero de pieles a Descarnar</span>
                     </div>
