--- a/ServicuerosSA/Views/Bodegatripas/Index.cshtml
+++ b/ServicuerosSA/Views/Bodegatripas/Index.cshtml
@@ -56,7 +56,7 @@
                             <option value="0">Seleccione la bodega de almacenamineto</option>
                         </select>
                         <br />
-                        <span id="mensajede" class="alert alert-danger hidden">Seleccione la bodega de almacenamineto:</span>
+                        <span id="mensajebo" class="alert alert-danger hidden">Seleccione la bodega de almacenamineto:</span>
                     </div>
                     <div class="form-group">
                         <label class="control-label">Numero de pieles en el lote</label>
